# nimiapp-shijing

./: .gitignore  ADMISSION.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASE.md  SECURITY.md  design-qa.md  dev-hejing.html  dev-mingjing.html  dev-nianjing-overview.html  dev-preview.html  dev-yuejing-panel.html  eslint.config.mjs  index.html  nimi.app.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.electron.json  tsconfig.json  vite.config.ts
.claude/: launch.json
.nimi/: scaffold.lock.json
plans/: 2026-06-24-settings-css-decomposition.md  2026-06-24-shijing-css-architecture-refactor.md  shijing-profile-presence-reveal.md
scripts/: bundle-electron-preload.mjs  ensure-dev-renderer-port.mjs  i18n-audit.mjs  i18n-check.mjs  i18n.config.json  local-audit.mjs  pack.mjs  prepare-china-gazetteer.mjs  prepare-cn-gazetteer.cjs  run-electron-dev.mjs  run-tauri-dev.mjs  runtime-app-storage-projection.mjs  validate.mjs
spec/: AGENTS.md  INDEX.md
src/: dev-hejing.tsx  dev-mingjing.tsx  dev-nianjing-overview.tsx  dev-preview.tsx  dev-yuejing-panel.tsx  main.tsx  styles-mingjing-rich.css  styles-mirror-header.css  styles-mirror-v1.css  styles-nianjing-rich.css  styles-personal-data.css  styles-rijing-rich.css  styles-shijing-rich.css  styles-yuejing-rich.css  styles.css
src-electron/: main.ts  preload.cts  runtime-auth.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
test/: _fixtures.mjs  _mock-runtime-ai-client.mjs  algorithm-correctness.test.mjs  astrology-pipeline.test.mjs  (+113 more)
(+538 files in other folders)
